Unpacking and packing + Improved nodes statistics

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ target_link_libraries(edgc-dm curl)
 target_link_libraries(edgc-dm ssl)
 target_link_libraries(edgc-dm crypto)
 target_link_libraries(edgc-dm pthread)
+target_link_libraries(edgc-dm m)
